--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>ReyzaFolio</title>
+	<link rel="shortcut icon" type="image/icon" href="img/REYZA.jpg"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="ReyzaFolio" name="keywords">
     <meta content="ReyzaFolio" name="description">
@@ -158,7 +159,7 @@
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">S1 Engineering Informatics</h5>
                             <p class="mb-2"><strong>STMIK Amik Riau</strong> | <small>2019 - 2023</small></p>
-                            <p>- Menguasai Teknologi Informasi dan Sistem Informasi
+                            <p> - Menguasai Teknologi Informasi dan Sistem Informasi
 							<br> - Menguasai beberapa bidang komputer seperti Web Development, IT Support, Admin Database, Desain Grafis dan UI/UX Design
 							<br> - Menguasai bidang lain seperti Administrasi dan Marketing, Customer Service, Manajemen Data dan Technology Service</p>
                         </div>
@@ -166,7 +167,7 @@
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Sekolah Menengah Atas Jurusan IPA</h5>
                             <p class="mb-2"><strong>SMA Negeri 1 Rupat</strong> | <small>2016 - 2019</small></p>
-                            <p>- Menjadi anggota OSIS Seksi bidang prestasi akademik, seni, dan/atau olahraga sesuai bakat dan minat tahun 2017
+                            <p> - Menjadi anggota OSIS Seksi bidang prestasi akademik, seni, dan/atau olahraga sesuai bakat dan minat tahun 2017
 							<br> - Menjadi anggota Paskibraka Kecamatan Rupat tahun 2017
 							<br> - Menjadi anggota kelompok musik sekolah dan memenangkan kejuaraan Festival Band tingkat Kecamatan Rupat dan Rupat Utara tahun 2016</p>
                         </div>
@@ -239,6 +240,12 @@
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Magang</h5>
                             <p class="mb-2"><strong>PT. Bank Riau Kepri Syariah (Perseroda) Bengkalis Batupanjang Rupat</strong> | <small>2022</small></p>
+                        </div>
+						<div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">UI/UX Designer</h5>
+                            <p class="mb-2"><strong>Project UI/UX Kompetisi Inforsary</strong> | <small>2021</small></p>
+                            <p>Pembuatan UI/UX Design Aplikasi Mobile Rumah Sakit Rujukan dan Konsultasi Dokter (COVSTAT)</p>
                         </div>
                     </div>
                 </div>
@@ -423,11 +430,21 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
+				<div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/portfolio4.PNG" alt="">
+                        <img class="img-fluid rounded w-100" src="img/portfolio29.png" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="img/portfolio4.PNG" data-lightbox="portfolio">
+                            <a href="img/portfolio29.png" data-lightbox="portfolio">
+                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+				<div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
+                    <div class="position-relative overflow-hidden mb-2">
+                        <img class="img-fluid rounded w-100" src="img/portfolio23.png" alt="">
+                        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                            <a href="img/portfolio23.png" data-lightbox="portfolio">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                             </a>
                         </div>
@@ -445,9 +462,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/portfolio7.PNG" alt="">
+                        <img class="img-fluid rounded w-100" src="img/portfolio4.PNG" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="img/portfolio7.PNG" data-lightbox="portfolio">
+                            <a href="img/portfolio4.PNG" data-lightbox="portfolio">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                             </a>
                         </div>
@@ -465,9 +482,9 @@
                 </div>
 				<div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/portfolio3.PNG" alt="">
+                        <img class="img-fluid rounded w-100" src="img/portfolio7.PNG" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="img/portfolio3.PNG" data-lightbox="portfolio">
+                            <a href="img/portfolio7.PNG" data-lightbox="portfolio">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                             </a>
                         </div>
@@ -478,6 +495,26 @@
                         <img class="img-fluid rounded w-100" src="img/portfolio8.PNG" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             <a href="img/portfolio8.PNG" data-lightbox="portfolio">
+                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+				<div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
+                    <div class="position-relative overflow-hidden mb-2">
+                        <img class="img-fluid rounded w-100" src="img/portfolio3.PNG" alt="">
+                        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                            <a href="img/portfolio3.PNG" data-lightbox="portfolio">
+                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+				<div class="col-lg-4 col-md-6 mb-4 portfolio-item fourth">
+                    <div class="position-relative overflow-hidden mb-2">
+                        <img class="img-fluid rounded w-100" src="img/portfolio25.PNG" alt="">
+                        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                            <a href="img/portfolio25.PNG" data-lightbox="portfolio">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                             </a>
                         </div>
@@ -553,11 +590,11 @@
                         </div>
                     </div>
                 </div>
-				<div class="col-lg-4 col-md-6 mb-4 portfolio-item fourth">
+				<div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/portfolio11.png" alt="">
+                        <img class="img-fluid rounded w-100" src="img/portfolio22.png" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="img/portfolio11.png" data-lightbox="portfolio">
+                            <a href="img/portfolio22.png" data-lightbox="portfolio">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                             </a>
                         </div>
@@ -565,9 +602,39 @@
                 </div>
 				<div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/portfolio22.png" alt="">
+                        <img class="img-fluid rounded w-100" src="img/portfolio26.jpg" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="img/portfolio22.png" data-lightbox="portfolio">
+                            <a href="img/portfolio26.jpg" data-lightbox="portfolio">
+                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+				<div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
+                    <div class="position-relative overflow-hidden mb-2">
+                        <img class="img-fluid rounded w-100" src="img/portfolio27.jpg" alt="">
+                        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                            <a href="img/portfolio27.jpg" data-lightbox="portfolio">
+                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+				<div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
+                    <div class="position-relative overflow-hidden mb-2">
+                        <img class="img-fluid rounded w-100" src="img/portfolio28.jpg" alt="">
+                        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                            <a href="img/portfolio28.jpg" data-lightbox="portfolio">
+                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+				<div class="col-lg-4 col-md-6 mb-4 portfolio-item fourth">
+                    <div class="position-relative overflow-hidden mb-2">
+                        <img class="img-fluid rounded w-100" src="img/portfolio11.png" alt="">
+                        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                            <a href="img/portfolio11.png" data-lightbox="portfolio">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                             </a>
                         </div>
@@ -605,9 +672,19 @@
                 </div>
 				<div class="col-lg-4 col-md-6 mb-4 portfolio-item fourth">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/portfolio14.png" alt="">
+                        <img class="img-fluid rounded w-100" src="img/portfolio24.png" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="img/portfolio14.png" data-lightbox="portfolio">
+                            <a href="img/portfolio24.png" data-lightbox="portfolio">
+                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+				<div class="col-lg-4 col-md-6 mb-4 portfolio-item fourth">
+                    <div class="position-relative overflow-hidden mb-2">
+                        <img class="img-fluid rounded w-100" src="img/portfolio114.png" alt="">
+                        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                            <a href="img/portfolio114.png" data-lightbox="portfolio">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                             </a>
                         </div>
@@ -673,9 +750,9 @@
     <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
         <div class="container text-center py-5">
             <div class="d-flex justify-content-center mb-4">
-                <a class="btn btn-light btn-social mr-2" href="https://api.whatsapp.com/send/?phone=6283121866464&text&type=phone_number&app_absent=0"target="_blank"><i class="fab fa-whatsapp"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="https://web.facebook.com/profile.php?id=100005288528548"target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/m-agustianreyzanovris/"target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://api.whatsapp.com/send/?phone=6283121866464&text&type=phone_number&app_absent=0" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://web.facebook.com/profile.php?id=100005288528548" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/m-agustianreyzanovris/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="https://www.instagram.com/agustian_rn/" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
             <div class="d-flex justify-content-center mb-3">
