--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">UI/UX Designer</h5>
                             <p class="mb-2"><strong>Project UI/UX Kompetisi Inforsary</strong> | <small>2021</small></p>
-                            <p>Pembuatan UI/UX Design Aplikasi Mobile Rumah Sakit Rujukan dan Konsultasi Dokter (COVSTAT)</p>
+                            <p>Pembuatan UI/UX Design Aplikasi Mobile Rumah Sakit Rujukan dan Konsultasi Dokter (COVSTATS)</p>
                         </div>
                     </div>
                 </div>
@@ -764,7 +764,7 @@
                 <span class="px-3">|</span>
                 <a class="text-white" href="#">Help</a>
             </div>
-            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">ReyzaFolio</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="https://htmlcodex.com">ReyzaFolio</a>
+            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">ReyzaFolio</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="#">ReyzaFolio</a>
             </p>
         </div>
     </div>
