--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <h3 class="text-white font-weight-normal mb-3">I'm</h3>
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">M. AGUSTIAN REYZA NOVRIS</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">Design Graphic, Web Designer, IT Support, Web Developer, Front End Developer, Apps Designer</div>
+                    <div class="typed-text d-none">Medicine Checker,Design Graphic, Web Designer, IT Support, Web Developer, Front End Developer, Apps Designer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                         <a href="pdf/CV - M. Agustian Reyza Novris.pdf" class="btn btn-outline-light mr-5"download>Download CV</a>
                         <button type="button" class="btn-play" data-toggle="modal"
@@ -176,6 +176,12 @@
                 <div class="col-lg-6">
                     <h3 class="mb-4">My Expericence</h3>
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
+			    <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">Medicine Checker</h5>
+                            <p class="mb-2"><strong>PT. Great Deli Farma</strong> | <small>2023</small></p>
+                            <p>Bekerja sebagai Pemeriksa obat </p>
+                        </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Web Developer</h5>
