--- a/index.html
+++ b/index.html
@@ -176,7 +176,18 @@
                 <div class="col-lg-6">
                     <h3 class="mb-4">My Expericence</h3>
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
-			    
+			       <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">IT Manager</h5>
+                            <p class="mb-2"><strong>PT. Great Deli Farma</strong> | <small>2025</small></p>
+                            <p></p>
+                        </div>
+			    <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">Credit Collector</h5>
+                            <p class="mb-2"><strong>PT. Great Deli Farma</strong> | <small>2025</small></p>
+                            <p>Melakukan penagihan ke setiap outlet</p>
+                        </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Medicine Checker</h5>
