--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">IT Manager</h5>
                             <p class="mb-2"><strong>PT. Great Deli Farma</strong> | <small>2025</small></p>
-                            <p></p>
+                            <p>Memanage dan Memonitoring seluruh aspek teknologi informasi</p>
                         </div>
 			    <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
